# system_monitor_gui

./: README.md  database.py  gui.py  pyproject.toml  system_monitor.py
