[tool.poetry]
name = "system-monitor-gui"
version = "0.1.0"
description = "Desktop app to monitor system (CPU, RAM, Disk storage)"
authors = ["TpaXyXoJb <salnikovne@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^6.1.1"
sqlalchemy = "^2.0.36"
humanfriendly = "^10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
